--- a/Day-1/login.html
+++ b/Day-1/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         .login-success{
             color: green;
@@ -15,13 +16,24 @@
     </style>
 </head>
 <body>
-    <div>
-        <h2>Login</h2>
-        Enter your name : <input type="text" id="u"><br><br>
-        Enter your password : <input type="password" id="p"><br><br>
-        <button onclick="login()">Submit</button><br><br>
-        <p id="sp"></p>
-    </div>
+    <div class="container">
+        <div class="form-container">
+          <h1 class="title">Login</h1>
+          <form>
+            <div class="input-group">
+              <label for="login-email">Email</label>
+              <input type="email" id="login-email" placeholder="Enter your email" required>
+            </div>
+            <div class="input-group">
+              <label for="login-password">Password</label>
+              <input type="password" id="login-password" placeholder="Enter your password" required>
+            </div>
+            <button type="submit" class="btn">Login</button>
+            <p class="switch-form">
+              Don't have an account? <a href="#">Register</a>
+            </p>
+          </form>
+        </div>
 
 
     <script>
@@ -52,3 +64,7 @@
     </script>
 </body>
 </html>
+
+
+
+
